<resources>
    <string name="app_name"> Score Keeper EL CLASICO</string>
    <string name="team_a">Real Madrid</string>
    <string name="team_b">FC Barcelona</string>
    <string name="team_default_score">0</string>
    <string name="team_default_foul">0</string>
    <string name="goal_button_text">Goal</string>
    <string name="foul_button_text">Foul</string>
    <string name="image_view_contetnt_description">Herb Real Madrid and Barcelona. View of a football field.</string>
    <string name="reset_button_text">Reset</string>
</resources>
