<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.android.courtcounter.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/el_clasico"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_view_contetnt_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:id="@+id/score_table">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TeamNameStyle"
                android:text="@string/team_a"
                android:background="#FFFFFF"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/scoreStyle"
                android:text="@string/team_default_score" />

            <TextView
                android:id="@+id/team_a_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/foulStyle"
                android:text="@string/team_default_foul" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:onClick="goalTeamA"
                android:text="@string/goal_button_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:onClick="foulsTeamA"
                android:text="@string/foul_button_text" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TeamNameStyle"
                android:text="@string/team_b"
                android:background="#FFFFFF"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/scoreStyle"
                android:text="@string/team_default_score" />

            <TextView
                android:id="@+id/team_b_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/foulStyle"
                android:text="@string/team_default_foul" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:onClick="goalTeamB"
                android:text="@string/goal_button_text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:onClick="foulsTeamB"
                android:text="@string/foul_button_text" />

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/score_table"
        android:layout_margin="16dp"
        android:id="@+id/goal_history"
        android:textSize="28sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:background="#ded8d8"
        android:padding="16dp"
        android:alpha="0.6"
        android:maxLines="5"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/reset_button_text" />
</RelativeLayout>